add driver license to the example app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_idpass_lite" />
 
-    <include
+  <include
         android:id="@+id/item_nfc"
         layout="@layout/item_nfc"
         android:layout_width="match_parent"
@@ -108,7 +108,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_nfc" />
 
-    <TextView
+  <include
+    android:id="@+id/item_driver_license"
+    layout="@layout/item_driver_license"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="24dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginEnd="24dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/item_qr" />
+
+  <TextView
         android:id="@+id/branding_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
